Added necessary structure for BCrypt password encoding from Spring Security Created test method to verify that hashes are encrypted and retrieved properly

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Security dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- JSP
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
